<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/twRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <ImageView
            android:id="@+id/tooltipRegisterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Help"
            android:src="@drawable/ic_question_mark"
            app:layout_constraintBottom_toTopOf="@+id/etRegisterEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etRegisterEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/twRegister"/>

        <EditText
            android:id="@+id/etRegisterEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="12"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twRegister"
            app:layout_constraintVertical_bias="0.08" />

        <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterEmailAddress"
        app:layout_constraintVertical_bias="0.08" />

        <EditText
        android:id="@+id/etRegisterRePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="12"
        android:hint="@string/repassword"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword"
        app:layout_constraintVertical_bias="0.08" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterRePassword"
            app:layout_constraintVertical_bias="0.25">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerBtn"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange"
                android:layout_marginBottom="@dimen/small_bottom_margin"/>

            <Button
                android:id="@+id/btnRegisterWithGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginGoogleBtn"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/red"
                android:layout_marginBottom="@dimen/small_bottom_margin"/>

            <Button
                android:id="@+id/btnRegisterToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginBtn"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/secondary_button"
                android:layout_marginBottom="@dimen/small_bottom_margin"
                android:layout_marginTop="@dimen/small_bottom_margin"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--TODO: Eldöntött nézethez külön layout, hogy jól látszódjanak a gombok.-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTextColor="@color/orange"
        app:itemIconTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>